--- a/homework2/Task 3/style.css
+++ b/homework2/Task 3/style.css
@@ -14,3 +14,10 @@
 .star{
     color: #f00;
 }
+
+.container2{
+    width: 90%;
+    max-width: 400px;
+    margin: 0 auto 0 auto;
+    text-align: center;
+}
