--- a/homework7.2/css/style.css
+++ b/homework7.2/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html, body{
+    width: 100%;
+    height: 100%;
+}
+
 body{
     border: 10px solid #2b81ac;
     background-color: #3399cc;
@@ -12,7 +17,7 @@ body{
     font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
 }
 
-div{
+.slogan{
     margin: 24px 213px;
     font-size: 28px;
 }
