--- a/homework8/homework8.2/css/style.css
+++ b/homework8/homework8.2/css/style.css
@@ -122,7 +122,11 @@ body{
     background-image: url(../img/autor.png);
     background-repeat: no-repeat;
     position: absolute;
+    
 } */
 
-
+.autor_photo{
+    position: absolute;
+    bottom: 50%;
+}
     
