--- a/homework9/homework9.1/css/style.css
+++ b/homework9/homework9.1/css/style.css
@@ -4,7 +4,14 @@
     box-sizing: border-box;
 }
 
+html, body{
+    width: 100%;
+    height: 100%;
+}
+
 .conteiner {
+    height: 90%;
+    max-height: 940px;
     width: 90%;
     max-width: 1400px;
     padding: 125px;
