--- a/homework10/cahee/css/style.css
+++ b/homework10/cahee/css/style.css
@@ -28,49 +28,47 @@ section{
     background-color: #b07cf7;
     width: 100%;
     max-width: 1500px;
-    height: 100%;
-    max-height: 864px;
+    /* height: 100%;
+    max-height: 864px; */
     text-align: center;
     padding-top: 100px;
-    
+    padding-bottom: 120px;    
 }
-
-.image{
-    content: url(../img/cocktail.png);
-    max-width: 370px;
-    width: 100%;
-    height: 100%;
-    max-height: 310px;
-} 
 
 
 .cards{
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    width: 100%;
+    width: 90%;
     max-width: 1170px;
     margin-bottom: 50px;
 }
 
-.card{
-    display: flex;
-    width: calc(33.3333% - 15px);
+.card {
+    width: calc(33.33333% - 15px);   
     position: relative;
     box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.5);
-    /* padding: 20px; */
+    overflow: hidden;
+    transition: all .2s ease;
+}
+
+.card:hover{
+    transform: scale(1.02);
 }
 
 
 
+.image{
+    width: 100%;
+    vertical-align: top; /* тут убрали противную полоску внизу */
+}
 
 .by{
-    position: absolute;
-    left: 20px;
-    bottom: 22px;
     font-family: 'Raleway', sans-serif;
     font-size: 13px;
     color: #fff;
+    text-align: left;
 }
 
 .date{
@@ -86,7 +84,15 @@ section{
     top: 30px;
     left: 30px;
     text-align: center;
+    line-height: 30px;
+    margin-left: -95px;
+    transition: all .2s ease;
 }
+
+.card:hover .date{
+    margin-left: 0;
+}
+
 
 .date::first-line{
     font-size: 32px;
@@ -94,14 +100,50 @@ section{
 }
 
 .topic{
-    position: absolute;
-    left: 20px;
-    bottom: 55px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     color: #fff;
     font-size: 20px;
-    text-align: start;
-    padding-right: 20px;
+    text-align: left;
+    margin-bottom: 25px;
 }
 
+.wrap{
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    padding-bottom: 22px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    /* margin-bottom: -108px;
+    transition: all .1s ease; */
+    
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.95) 100%);  
+}
+
+/* .card:hover .wrap {
+    margin-bottom: 0;
+} */
+
+.view_more{
+    display: inline-block;
+    width: 200px;
+    height: 55px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    color: #fff;
+    font-size: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    line-height: 55px;
+    background-color: #f72b3b;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+    transition: all .1s ease-in;
+}
+
+.view_more:hover{
+    transform: scale(1.03);
+    background-color: #ff2132;
+}
