--- a/homework10/cahee/css/style.css
+++ b/homework10/cahee/css/style.css
@@ -26,21 +26,23 @@ p{
 section{
     background-color: #b07cf7;
     width: 100%;
-    max-width: 1500px;
-    /* height: 100%;
-    max-height: 864px; */
+    /* height: 100%; */
+    /* max-height: 864px; */
     text-align: center;
     padding-top: 100px;
     padding-bottom: 120px;    
 }
 
+.container{
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1170px;
+
+}
 
 .cards{
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
-    width: 90%;
-    max-width: 1170px;
     margin-bottom: 50px;
 }
 
@@ -83,11 +85,13 @@ section{
     text-align: center;
     line-height: 30px;
     margin-left: -95px;
+    margin-top: -95px;
     transition: all .2s ease;
 }
 
 .card:hover .date{
     margin-left: 0;
+    margin-top: 0;
 }
 
 
@@ -112,10 +116,8 @@ section{
     padding-bottom: 22px;
     padding-left: 20px;
     padding-right: 20px;
-
     /* margin-bottom: -108px;
-    transition: all .1s ease; */
-    
+    transition: all .1s ease; */  
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 0.95) 100%);  
 }
 
