--- a/homework11/cahee/assets/css/style.css
+++ b/homework11/cahee/assets/css/style.css
@@ -1,6 +1,6 @@
 *{
+    padding: 0;
     margin: 0;
-    bottom: 0;
     box-sizing: border-box;
 }
 
@@ -10,30 +10,37 @@ html, body{
 }
 
 body{
-    background-image: url(../img/fontpic.png);
-    background-repeat: no-repeat;
     font-family: 'Raleway', sans-serif;
 }
 
-.header_main{
-    padding-top: 214px;
+section.section-white{
+    padding-top: 347px;
+    padding-bottom: 71px;
+    background: #f8f8fa url(../img/berry.png) bottom 9px right -53px  no-repeat ;
+}
+
+.container{
+    width: 90%;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+.header-container{
+    width: 90%;
+    max-width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 150px;
 }
 
 .page_header{
+    position: fixed;
     width: 100%;
-    height: 100%;
-    max-height: 150px;
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background: transparent;
-}
-
-.main__logo{
-    position: absolute;
-    top: 50px;
-    left: 30px;
+    height: 150px;
+    background-color: rgba(249, 248, 251, .48);
+    z-index: 1;
 }
 
 ul{
@@ -51,19 +58,12 @@ ul{
     font-weight: 700;
     color: #262626;
     text-transform: uppercase;
-    margin: 0 37px;
+    margin: 0 15px;
     padding: 8px 0 0 0;
 }
 
 .menu_point--active{
     border-top: 3px solid #ff6033;
-}
-
-.container{
-    width: 90%;
-    max-width: 1170px;
-    margin: 0 auto;
-    display: flex;
 }
 
 .container-info{
@@ -78,7 +78,7 @@ ul{
 }
 
 .title_header{
-    margin-bottom: 35px;
+    margin-bottom: 16px;
     color: #262626;
 }
 
@@ -89,7 +89,8 @@ ul{
 
 .main_text--black{
     color: #262626;
-    margin-bottom: 32px;
+    margin-bottom: 27px;
+    line-height: 26px;
 }
 
 .btn{
@@ -124,7 +125,7 @@ ul{
     border: 2px solid #2d2d2d;
     border-radius: 12px;
     margin: 0 auto;
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
     position: relative;
 }
 
@@ -138,9 +139,14 @@ ul{
     top: 7px;
 }
 
+/* .section--blue{
+    padding-top: 40px;
+} */
+
 .section_main{
     background-color: #00baba;
     width: 100% 100%;
+    
 }
 
 .container_main{
@@ -148,11 +154,16 @@ ul{
     max-width: 1170px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+    margin: 0 auto;
 }
 
 .main_block{
-    width: calc(50% - 100px);
+    width: calc(50% - 85px);
+}
+
+.main_block-title{
+    padding-top: 160px;
 }
 
 .title_main + .main_text--white{
@@ -163,9 +174,10 @@ ul{
     font-size: 90px;
     font-weight: 700;
     color: #fff;
-    margin-bottom: 33px;
+    margin-bottom: 10px;
 }
 
 .main_text--white{
     color: #fff;
+    line-height: 25px;
 }
