--- a/homework14/cahee full/assets/css/style.scss
+++ b/homework14/cahee full/assets/css/style.scss
@@ -4,6 +4,8 @@ $text-color: #262626;
 
 body{
     font-family: 'Raleway', sans-serif;
+    // font-size: calc(12px + (26 - 14) * ((100vw - 375px) / (1920 - 375)));
+    // line-height: calc(18px + (32 - 16) * ((100vw - 375px)/(1920 - 375)));
 }
 
 .container {
@@ -33,7 +35,7 @@ header{
     height: 150px;
     position: fixed;
     width: 100%;
-    z-index: 999;
+    z-index: 10001;
     transition: all .2s ease;
     .container__header{
         display: flex;
@@ -53,6 +55,7 @@ header{
         }
     }
 }
+
 .header__menu ul{
     display: flex;
     justify-content: flex-end;
@@ -82,6 +85,66 @@ header{
                 width: 100%;
 
             }
+        }
+    }
+}
+
+.hamburger {
+    display: none;
+}
+
+#menu_shadow {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, .8);
+    display: none;
+    backdrop-filter: blur(3px);
+    z-index: 10000;
+    
+}
+
+.mobile_menu_block {
+    position: fixed;
+    top: 150px;
+    right: -110%;
+    height: 100%;
+    width: 100%;
+    max-width: 400px;
+    box-shadow: 0 1px 5px 0 rgba(53, 68, 51, 50%);
+    backdrop-filter: blur(2px);
+    background-color: rgba(255, 255, 255, .7);
+    z-index: 10001;
+    transition: all .1s ease;  
+}
+
+.mobile_menu_higher {
+    top: 60px;
+}
+
+.open #menu_shadow{
+    display: block;
+}
+
+.open .mobile_menu_block{
+    right: 0;
+}
+
+.mobile__menu {
+    li {
+        box-shadow: 0 1px 5px 0 rgba(53, 68, 51, 50%);
+        a {
+            display: inline-block;
+            width: 100%;
+            padding: 20px;
+            color: $text-color;
+            text-transform: uppercase;
+            font-weight: 700;
+            outline: none;
+            line-height: 30px;
+            
         }
     }
 }
@@ -176,11 +239,13 @@ header{
     .container__section--blue{
         display: flex;
         justify-content: space-between;
+        align-items: stretch;
         .container__inner{
             width: 50%;   
         }
         .container-title{
-            background: url(../img/tomato.png) no-repeat;           
+            background: url(../img/tomato.png) no-repeat; 
+            background-size: 100%;          
             .third__title{
                 color: #fff;
                 padding-top: 134px;
@@ -389,16 +454,16 @@ header{
                 left: 30px;
                 width: 60px;
                 height: 60px;
-                background-color: rgba(0, 0, 0, .5);
+                color: #fff;
                 font-size: 21px;
                 font-weight: 900;
-                color: #fff;
                 border-radius: 6px;
                 text-align: center;
                 line-height: 30px;
                 margin-left: -95px;
                 margin-top: -95px;
                 transition: all .2s ease;
+                background-color: rgba(0, 0, 0, .5);
                 &::first-line{
                     font-size: 32px;
                     font-weight: 700;
@@ -537,5 +602,130 @@ footer{
             color: #ff2b58;
             font-weight: 700;
         }
+    }
+}
+
+.to_top{
+    display: none;
+    position: fixed;
+    left: 15px;
+    bottom: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    color: $text-color;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 48px;
+    background-color: rgba(255, 255, 255, .7);
+    border: 2px solid transparent;
+    transition: all .2s ease;
+    &:hover{
+        transform: scale(1.2);
+        border: 2px solid #ff6033;
+    }
+    
+}
+
+.active{
+    display: block;
+}
+
+.modal_wrap{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;background-color: rgba(0, 0, 0, .7);
+    z-index: 11000;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    &.open{
+        display: flex;
+    }
+    .modal_window{
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 3px 5px 10px #fff;
+        width: 100%;
+        max-width: 400px;
+        .modal_header{
+            border-radius: 10px 10px 0 0 ;
+            text-align: center;
+            font-weight: 700;
+            padding: 15px 0;
+            color: $text-color;
+            background-color: rgba(0, 0, 0, .7);
+        }
+        .modal_main{
+            padding: 15px 0;
+            text-align: center;
+            a{
+                display: inline-block;
+                text-transform: uppercase;
+                line-height: 35px;
+                font-weight: 700;
+                color: $text-color;
+                width: 100%;
+                &::after {
+                    content: '';
+                    display: block;
+                    height: 3px;
+                    width: 0%;
+                    background-color: #ff6033;
+                    transition: all .3s ease;
+                }
+                &:hover::after {
+                    width: 100%;
+                }
+                &:focus::after {
+                    width: 100%;
+                }
+            }
+        }
+        .modal_footer{
+            border-radius: 0 0 10px 10px;
+            border-top: 1px solid #dbdbdb;
+            background-color: rgba(0, 0, 0, .7);
+            .close {
+                cursor: pointer;
+                margin: 0 auto;
+                display: block;
+                position: relative;
+                width: 32px;
+                height: 32px;
+                opacity: 0.3;
+                &:hover{
+                    opacity: 1;
+                }
+                &::before, &::after{
+                position: absolute;
+                left: 15px;
+                content: ' ';
+                height: 33px;
+                width: 2px;
+                background-color: #fff;  
+                }
+            }
+            .close:before {
+                transform: rotate(45deg);
+            }
+            .close:after {
+                transform: rotate(-45deg);
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    .header__menu{
+        display: none;
+
+    }
+    .hamburger{
+        display: block;
     }
 }
