--- a/homework14/cahee full/assets/css/style.css
+++ b/homework14/cahee full/assets/css/style.css
@@ -28,9 +28,17 @@ body {
   margin: 0 auto;
 }
 
+.title {
+  font-size: 90px;
+  margin-bottom: 30px;
+  color: #fff;
+  font-weight: 700;
+}
+
 .btn {
   display: inline-block;
-  width: 200px;
+  width: 90%;
+  max-width: 200px;
   height: 55px;
   font-weight: 300;
   text-decoration: none;
@@ -43,6 +51,13 @@ body {
 }
 .btn:hover {
   transform: scale(1.03);
+}
+
+.text_wrap {
+  width: 90%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
 header {
@@ -160,24 +175,24 @@ header.page_header .header_logo {
 
 .first__section--white {
   width: 100%;
-  padding-top: 347px;
-  padding-bottom: 71px;
-  background: #f8f8fa url(../img/berry.png) top 15px right -53px no-repeat;
+  padding: 347px 0 97px;
+  background: #faf9fb url(../img/berry.png) top 67% right -14% no-repeat;
+  background-size: contain;
 }
 .first__section--white .container__section--white {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 .first__section--white .container__section--white .container__info {
-  width: calc(33.3333% - 15px);
-  margin-bottom: 294px;
+  width: 33.3333%;
+  margin-bottom: 311px;
 }
 .first__section--white .container__section--white .first__title {
   font-size: 60px;
   color: #262626;
   font-weight: 900;
-  margin-bottom: 16px;
+  margin-bottom: 15px;
 }
 .first__section--white .container__section--white .btn--orange {
   background-color: #ff6030;
@@ -200,7 +215,9 @@ header.page_header .header_logo {
   border: 2px solid #2d2d2d;
   margin: 0 auto;
   border-radius: 12px;
-  position: relative;
+  position: absolute;
+  left: 50%;
+  margin: -12px;
 }
 .scroll_mouse::before {
   content: "";
@@ -214,23 +231,23 @@ header.page_header .header_logo {
 
 .second__section--green {
   width: 100%;
+  padding: 53px 0 16px;
   background-color: #00baba;
-  padding: 35px 0 74px;
 }
 .second__section--green .container__section--green {
+  background: url(../img/cup.png) top left 0 no-repeat;
+  background-size: contain;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-end;
+  align-items: stretch;
+  padding-bottom: 215px;
+  margin: 0 auto;
 }
 .second__section--green .container__section--green .main_block {
-  width: calc(50% - 85px);
+  margin-top: 108px;
+  width: 42.735%;
 }
 .second__section--green .container__section--green .main_block .title {
-  font-size: 90px;
-  font-weight: 700;
-  color: #fff;
-}
-.second__section--green .container__section--green .main_block .title.second__title {
   margin-bottom: 10px;
 }
 .second__section--green .container__section--green .main_block .title + .second-section__main_text--white {
@@ -244,36 +261,44 @@ header.page_header .header_logo {
 .third__section--blue {
   width: 100%;
   background-color: #70bfff;
-  padding: 179px 0 151px;
+  padding: 100px 0 151px;
 }
 .third__section--blue .container__section--blue {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
-}
-.third__section--blue .container__section--blue .container__inner {
-  width: 50%;
+  flex-wrap: wrap;
 }
 .third__section--blue .container__section--blue .container-title {
-  background: url(../img/tomato.png) no-repeat;
-  background-size: 100%;
+  width: 50%;
+  position: relative;
+  background: url(../img/tomato.png) center right no-repeat;
+  background-size: contain;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 .third__section--blue .container__section--blue .container-title .third__title {
-  color: #fff;
-  padding-top: 134px;
-  font-size: 90px;
+  text-align: right;
 }
 .third__section--blue .container__section--blue .list_container {
-  padding-left: 96px;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+}
+.third__section--blue .container__section--blue .list_container .servises_list {
+  margin-left: 15px;
+  max-width: 400px;
+  margin-top: 75px;
+  width: 100%;
 }
 
 .list {
   display: block;
-  width: 400px;
+  width: 100%;
   height: 100px;
   background-color: #fff;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
   transition: all 0.1s ease;
   position: relative;
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
@@ -309,48 +334,51 @@ header.page_header .header_logo {
 }
 
 .fourth__section--yellow {
-  width: 100%;
   background-color: #ffe92f;
   text-align: center;
   padding: 100px 0 120px;
 }
-.fourth__section--yellow .fourth__title {
-  font-size: 90px;
-  color: #262626;
+.fourth__section--yellow .text_wrap--yellow {
   margin-bottom: 28px;
 }
-.fourth__section--yellow .fourth-section__main_text {
+.fourth__section--yellow .text_wrap--yellow .fourth__title {
+  color: #262626;
+  margin-bottom: 25px;
+}
+.fourth__section--yellow .text_wrap--yellow .fourth-section__main_text {
   line-height: 25px;
   margin-bottom: 45px;
-  padding: 0 365px;
 }
-.fourth__section--yellow .container__section--yellow {
+.fourth__section--yellow .container__section--yellow .picture_wrap {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
   flex-wrap: wrap;
-  margin-bottom: 50px;
-}
-.fourth__section--yellow .container__section--yellow .image_wrap .image_inner {
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
-}
-.fourth__section--yellow .container__section--yellow .w68 {
-  width: 65.811965812%;
-  margin-bottom: 30px;
-}
-.fourth__section--yellow .container__section--yellow .w31 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 31.6239316239%;
   height: 100%;
   margin-bottom: 30px;
 }
-.fourth__section--yellow .container__section--yellow .w31 .image_inner--small {
-  height: calc(50% - 30px);
+.fourth__section--yellow .container__section--yellow .picture_wrap .image_wrap .image_inner {
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.fourth__section--yellow .container__section--yellow .w31 .image_inner--small:first-child {
-  margin-bottom: 30px;
+.fourth__section--yellow .container__section--yellow .picture_wrap .w68 {
+  width: calc(65.8119% - 15px);
+  height: 100%;
+}
+.fourth__section--yellow .container__section--yellow .picture_wrap .w31 {
+  width: calc(31.6239% - 15px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.fourth__section--yellow .container__section--yellow .picture_wrap .w31 .w31_1 {
+  width: 100%;
+  height: calc(50% - 15px);
+}
+.fourth__section--yellow .container__section--yellow .picture_wrap .w50 {
+  height: 100%;
+  width: calc(50% - 15px);
 }
 .fourth__section--yellow .btn--grey {
   background-color: #5585a2;
@@ -364,9 +392,10 @@ header.page_header .header_logo {
 .fifth__section--white .container_fifth__section--white {
   display: flex;
   align-items: flex-end;
+  flex-wrap: wrap;
 }
 .fifth__section--white .container_fifth__section--white .container_inner {
-  width: 48.7179487179%;
+  width: 48.7179%;
   margin-right: 30px;
 }
 .fifth__section--white .container_fifth__section--white .container_inner .fifth__title {
@@ -390,6 +419,10 @@ header.page_header .header_logo {
   font-weight: 300;
   padding: 0 20px;
 }
+.fifth__section--white .container_fifth__section--white .container_inner .mail_area:focus {
+  outline: none;
+  border: 1px solid #96b92c;
+}
 .fifth__section--white .container_fifth__section--white .btn--green {
   background-color: #96b92c;
   font-family: "Raleway", sans-serif;
@@ -405,20 +438,23 @@ header.page_header .header_logo {
   text-align: center;
   padding: 100px 0 120px;
 }
-.sixth__section--violet .sixth__title {
+.sixth__section--violet .text_wrap--violet {
+  margin-bottom: 57px;
+}
+.sixth__section--violet .text_wrap--violet .sixth__title {
   font-size: 90px;
   color: #fff;
   margin-bottom: 25px;
 }
-.sixth__section--violet .sixth-section__main_text--white {
+.sixth__section--violet .text_wrap--violet .sixth-section__main_text--white {
   color: #fff;
-  padding: 0 315px;
-  margin-bottom: 57px;
+  line-height: 25px;
 }
 .sixth__section--violet .cards {
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
+  flex-wrap: wrap;
 }
 .sixth__section--violet .cards .card {
   width: calc(33.33333% - 15px);
@@ -490,20 +526,21 @@ header.page_header .header_logo {
   text-align: center;
   padding-top: 80px;
 }
-.seventh__section .seventh__title {
-  font-size: 90px;
-  font-weight: 700;
+.seventh__section .text_wrap--sky {
+  margin-bottom: 45px;
+  max-width: 370px;
+}
+.seventh__section .text_wrap--sky .seventh__title {
   color: #262626;
   margin-bottom: 24px;
 }
-.seventh__section .seventh-section__main_text--black {
-  font-weight: 300;
-  margin-bottom: 45px;
+.seventh__section .text_wrap--sky .seventh-section__main_text--black {
   line-height: 22px;
 }
 .seventh__section .container__seventh-section {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .seventh__section .container__seventh-section .mini-container {
   width: calc(50% - 85px);
@@ -588,12 +625,12 @@ header.page_header .header_logo {
 
 footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   height: 90px;
   background-color: #262626;
-  padding: 0 150px;
 }
 footer .copyright, footer .footer_slogan {
   color: #b9b9b9;
@@ -608,20 +645,21 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
 .to_top {
   display: none;
   position: fixed;
-  left: 15px;
+  right: 15px;
   bottom: 20px;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   text-align: center;
   color: #262626;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 20px;
-  line-height: 48px;
+  font-size: 18px;
+  line-height: 38px;
   background-color: rgba(255, 255, 255, 0.7);
   border: 2px solid transparent;
   transition: all 0.2s ease;
+  z-index: 100;
 }
 .to_top:hover {
   transform: scale(1.2);
@@ -720,12 +758,242 @@ footer .copyright .pink_text, footer .footer_slogan .pink_text {
   transform: rotate(-45deg);
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1206px) {
+  .third__section--blue .container__section--blue .container-title .third__title {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 1170px) {
+  .second__section--green .container__section--green .main_block .title {
+    color: #262626;
+  }
+  .second__section--green .container__section--green .main_block .second-section__main_text--white {
+    color: #262626;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .second__section--green {
+    background-size: 50%;
+    background-position-y: 40%;
+  }
+}
+@media screen and (max-width: 900px) {
+  .first__section--white {
+    padding: 220px 0 50px;
+  }
+  .first__section--white .container__section--white {
+    justify-content: center;
+  }
+  .first__section--white .container__section--white .container__info {
+    width: 90%;
+    text-align: center;
+    margin-bottom: 81px;
+  }
+
+  .second__section--green .container__section--green {
+    justify-content: center;
+  }
+  .second__section--green .container__section--green .main_block {
+    width: 80%;
+    text-align: center;
+  }
+
+  .fifth__section--white {
+    padding: 80px 0 80px;
+    background-position-y: 50px;
+  }
+  .fifth__section--white .container_fifth__section--white .container_inner {
+    width: 60%;
+  }
+
+  .sixth__section--violet {
+    padding: 50px 0 60px;
+  }
+  .sixth__section--violet .cards {
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .sixth__section--violet .cards .card {
+    margin: 0 auto;
+    margin-bottom: 30px;
+    width: 40%;
+  }
+  .sixth__section--violet .cards .card .wrap .by {
+    font-size: 16px;
+  }
+
+  .seventh__section {
+    padding-top: 40px;
+  }
+  .seventh__section .container__seventh-section .mini-container {
+    width: calc(50% - 40px);
+  }
+}
+@media screen and (max-width: 768px) {
+  .first__section--white {
+    background-size: cover;
+  }
+
+  .third__section--blue {
+    padding: 50px 0 75px;
+  }
+  .third__section--blue .third__title {
+    font-size: 80px;
+  }
+
+  .fourth__section--yellow {
+    padding: 50px 0 60px;
+  }
+}
+@media screen and (max-width: 730px) {
   .header__menu {
     display: none;
   }
 
   .hamburger {
     display: block;
+  }
+}
+@media screen and (max-width: 425px) {
+  .title {
+    font-size: 60px;
+  }
+
+  .first__section--white {
+    padding: 150px 0 50px;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .second__section--green .container__section--green {
+    padding-bottom: 50px;
+  }
+
+  .third__section--blue .container__section--blue {
+    flex-direction: column-reverse;
+  }
+  .third__section--blue .container__section--blue .container-title {
+    width: 100%;
+    background-position: center center;
+  }
+  .third__section--blue .container__section--blue .list_container {
+    width: 100%;
+  }
+  .third__section--blue .container__section--blue .list_container .servises_list {
+    margin-left: 0;
+  }
+
+  .fourth__section--yellow .container__section--yellow .picture_wrap {
+    flex-direction: column;
+  }
+  .fourth__section--yellow .container__section--yellow .picture_wrap .w68 {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .fourth__section--yellow .container__section--yellow .picture_wrap .w31 {
+    margin-top: 15px;
+    flex-direction: row;
+    width: 100%;
+  }
+  .fourth__section--yellow .container__section--yellow .picture_wrap .w31 .w31_1 {
+    width: calc(50% - 15px);
+  }
+  .fourth__section--yellow .container__section--yellow .bottom_wrap {
+    flex-direction: row;
+  }
+
+  .fifth__section--white {
+    background: none;
+  }
+  .fifth__section--white .container_fifth__section--white {
+    justify-content: center;
+  }
+  .fifth__section--white .container_fifth__section--white .container_inner {
+    width: 100%;
+    margin: 0 0 20px;
+    text-align: center;
+  }
+
+  .sixth__section--violet .cards {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  .sixth__section--violet .cards .card {
+    width: 80%;
+  }
+
+  .seventh__section .container__seventh-section {
+    flex-direction: column-reverse;
+  }
+  .seventh__section .container__seventh-section .mini-container {
+    width: 100%;
+  }
+
+  footer {
+    flex-direction: column;
+  }
+
+  .main_text {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .title {
+    font-size: 60px;
+  }
+
+  .third__section--blue .third__title {
+    font-size: 60px;
+  }
+
+  .fourth__section--yellow .container__section--yellow .picture_wrap {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  .fourth__section--yellow .container__section--yellow .picture_wrap .w68 {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .fourth__section--yellow .container__section--yellow .picture_wrap .w31 {
+    margin-top: 15px;
+    flex-direction: column;
+    width: 100%;
+  }
+  .fourth__section--yellow .container__section--yellow .picture_wrap .w31:last-child {
+    margin-bottom: 0;
+  }
+  .fourth__section--yellow .container__section--yellow .picture_wrap .w31 .w31_1 {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .fourth__section--yellow .container__section--yellow .bottom_wrap {
+    flex-direction: column;
+  }
+  .fourth__section--yellow .container__section--yellow .bottom_wrap:last-child {
+    margin-bottom: 0;
+  }
+  .fourth__section--yellow .container__section--yellow .bottom_wrap .w50 {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .sixth__section--violet .text_wrap--violet .sixth__title {
+    font-size: 60px;
+  }
+  .sixth__section--violet .cards .card .wrap .topic {
+    margin-bottom: 13px;
+  }
+  .sixth__section--violet .cards .card .date {
+    top: 10px;
+    left: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 17px;
+  }
+  .sixth__section--violet .cards .card .date::first-line {
+    font-size: 16px;
+    font-weight: 700;
   }
 }
