--- a/Bhromaon/assets/css/style.scss
+++ b/Bhromaon/assets/css/style.scss
@@ -20,6 +20,8 @@ body{
     font-weight: 400;
 }
 
+
+/* кнопка */
 .btn{
     position: relative;
     display: inline-block;
@@ -63,10 +65,14 @@ body{
     }
 }
 
+
+/* общие стили всех маленьких блоков на странице */
 .block_wrap{
     width: calc(50% - 15px);
 }
 
+
+/* первый экран */
 .search{
     display: -webkit-box;
     display: -ms-flexbox;
@@ -256,7 +262,8 @@ header{
             flex-wrap: wrap;
     }
     &_fixed{
-        padding: 200px 0 120px;
+        padding: 200px 0 120px; /* тут для первой  секции после хедера сделал прибавил верхний паддинг в высоту хедера
+                                            для того, чтобы когда хедер прилипает к верху небыло скачка у секии*/
     }
 }
 
@@ -290,6 +297,8 @@ header{
             align-items: flex-end;
 }
 
+/* стили блока с картинками на первой секции */
+
 .image_inner {
     width: 65.5%; 
     margin-bottom: 2px;
@@ -310,7 +319,7 @@ header{
     }
 }
 
-
+/* блок с иконками и долбанными дужками, пол ночи над ними сидел */
 .recomm{
     padding: 94px 0 116px;
     background-color: #333;
@@ -337,13 +346,13 @@ header{
     }
 }
 
+/* стили для центральной иконки */
 .check{    
     position: relative;        
     &::before{
         display: block;
         position: absolute;
         content: '';
-        width: 140%;
         width: 178%;
         height: 100%;
         -webkit-transform: translateX(-23%);
@@ -354,6 +363,8 @@ header{
 
     }
 }
+
+/* стили для секций близнецов */
 
 .book_section{
     background: #c8ad99 url(../img/background3.png) center center / cover no-repeat;    
@@ -381,6 +392,8 @@ header{
     }
 }
 
+/* стили для блоков в секциях близнецах */
+
 .second-block{
     padding: 50px 30px 50px;
     background-color: rgba(0, 0, 0, .7);
@@ -401,6 +414,8 @@ header{
     }
 }
 
+
+/* тут сильно тупил с кавычками, не мог сообразить где взять иконку */
 .review{
     background: #2a2b2c url(../img/background5.png) center center / cover no-repeat;    
     padding: 120px 0 200px;
