--- a/Bhromaon/assets/css/style.scss
+++ b/Bhromaon/assets/css/style.scss
@@ -2,6 +2,8 @@
 
 @import 'icomoon';
 
+/* я так до конца и не понял для чего мне могут понадобиться в данном случае миксины и переменные, поэтому их не применял*/
+
 body{
     font-family: 'Josefin Sans',sans-serif;
     color: #fff;
