Add comments in scss

--- a/Bhromaon/assets/css/style.css
+++ b/Bhromaon/assets/css/style.css
@@ -64,6 +64,7 @@ a {
   content: "";
 }
 
+/* я так до конца и не понял для чего мне могут понадобиться в данном случае миксины и переменные, поэтому их не применял*/
 body {
   font-family: "Josefin Sans", sans-serif;
   color: #fff;
@@ -82,7 +83,7 @@ body {
   font-weight: 400;
 }
 
-/* кнопка */
+/* кнопка с ней тоже помучился, нашёл решение в интернете, но на сайте сэмплы кнопок и код были перемешаны */
 .btn {
   position: relative;
   display: inline-block;
