--- a/Bhromaon/assets/css/style.scss
+++ b/Bhromaon/assets/css/style.scss
@@ -23,7 +23,7 @@ body{
 }
 
 
-/* кнопка */
+/* кнопка с ней тоже помучился, нашёл решение в интернете, но на сайте сэмплы кнопок и код были перемешаны */
 .btn{
     position: relative;
     display: inline-block;
